grpc/k8s/k8s-grpcclient-product/minikube/k8s-2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpcclient-product
  namespace: n-anderjvila-learning
  labels:
    name: API
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpcclient-product
  template:
    metadata:
      labels:
        app: grpcclient-product
    spec:
      containers:
        - name: grpcclient-product
          image: anderjvila/grpcclient-product:v1.0.0
          imagePullPolicy: Never
          resources:
            requests:
              memory: 128Mi
              cpu: 250m
            limits:
              memory: 1024Mi
              cpu: 1024m
          ports:
            - containerPort: 8080
