grpc/k8s/k8s-grpcclient-product/minikube/k8s-3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpcclient-product-service
  namespace: n-anderjvila-learning
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30012
      name: tcp-8080
  selector:
    app: grpcclient-product
---
apiVersion: v1
kind: Service
metadata:
  name: grpcclient-product-service-ip-service
  namespace: n-anderjvila-learning
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      name: tcp-8080
      targetPort: 8080
  selector:
    app: grpcclient-product
