grpc/k8s/k8s-grpcclient-product/minikube/k8s-4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress-grpcclient-product
  namespace: n-anderjvila-learning
spec:
  defaultBackend:
    service:
      name: grpcclient-product-ip-service
      port:
        number: 8080
